refine quantization of charge

--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -20,14 +20,13 @@ When such materials (like the balloon) act like this, they are considered *elect
 
 :::tip[Key Concepts]
 
-- Like charges repel (ex: positive and positive); opposite charges attract (ex: positive and negative)
-- You most likely know this one!
-- Negative charges are possessed by electrons
-- Positive charges are possessed by protons
-- Electrical charge is ALWAYS conserved
-- You will probably recognize that this is similar to most other laws of conservation in physics.
-- In the balloon example, the *transfer* charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
-- Electrical charges are quantized
+* Like charges repel (ex: positive and positive); opposite charges attract (ex: positive and negative)
+  * You most likely know this one!
+* Negative charges are possessed by electrons
+* Positive charges are possessed by protons
+* Electrical charge is ALWAYS conserved
+  * You will probably recognize that this is similar to most other laws of conservation in physics.
+* Electrical charges are quantized
 
 :::
 
@@ -37,9 +36,43 @@ Don't worry if this doesn't make sense right now. We will go over everything in 
 
 As you may recall, an atom is made up of *electrons (-)*, *protons (+)*, and *neutrons (0, or no charge)*. Depending on the combinations of electrons, protons and neutrons, the atom is then either positively or negatively charged.
 
-Positively charged objects are at a loss of electrons. Their net charge is positive because there are fewer electrons than there are protons.
+* Positively charged objects are at a **loss** of electrons. Their net charge is positive because there are fewer electrons than there are protons.
+* Negatively charged objects are at a **gain** of extra electrons. Their charge is negative because there are fewer protons than there are electrons
 
-Negatively charged objects are at a gain of extra electrons. Their charge is negative because there are fewer protons than there are electrons
+### Quantization of Charge
+
+In 1909, Rober Millikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is **always** an integral multiple of an amount of charge $e$.
+
+:::note
+
+An integral multiple is a number resulting from multiplying an integer with a whole number. In other words, it means a whole number multiplied by another whole number. For example, $10$ is an integral multiple of $2$ because $2 \cdot 5 = 10$.
+
+:::
+
+In other words...
+
+* Charges **MUST** be present in discrete forms, or whole numbers: you cannot have half a charge. Additionally, you cannot have half an electron.
+* Charges are made of $e$, or the elementary charge (some call it fundamental charge).
+* Charge can exist in bundles. For example, $10e$ is a bundle of 10 elementary charges.
+* Charge is a scalar quantity
+
+These rules can be defined in the formula $q = Ne$ where $q$ is the total charge, $N$ is an integer number (positive or negative), and $e$ is the elementary charge.
+
+Furthermore, it was found that:
+
+* Electrons have a charge of $-e$
+* Protons have a charge of $+e$
+* Neutrons have a charge of $0$
+* Negatively charged objects have the charge $Ne$ where $N \lt 0$ (ex: $-2e$)
+* Positively charged objects have the charge $Ne$ where $N \gt 0$ (ex: $+2e$)
+
+:::tip[Key Concepts]
+
+* There are two types of charges: charges of opposite signs attract and charges of the same sign repel
+* Total charge in an isolated system is conserved (conservation of charge)
+* Charge is *quantized*
+
+:::
 
 ### Conservation of Electrical Charge
 
@@ -48,34 +81,6 @@ Electrical charge within a *closed system* isn't created or destroyed. The total
 It is also important to note that **electrons move, but protons don't**. That is because the protons are bound extremely tightly to the nucleus, so they are unable to escape. Electrons, however, can float around freely and move.
 
 Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge.
-
-### Quantization of Charge
-
-In 1909, Rober Millikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is always an integral multiple of an amount of charge $e$.
-
-:::note
-
-An integral multiple is a number resulting from multiplying an integer with a whole number. In other words, it means a whole number multiplied by another whole number. For example, $10$ is an integral multiple of $2$ because $2 \cdot 5 = 10$.
-
-:::
-
-In other words, charges MUST be present in discrete forms, or whole numbers; you cannot have half a charge. Additionally, you cannot have half an electron. It also means that charges exist in "bundles."
-
-Foundationally, this became the formula $q = Ne$ such that $q$ is the total charge, $N$ is an integer number, positive or negative, and $e$ is the elementary charge.
-
-The idea became that:
-
-- Electrons have a charge of $-e$, and negatively charged objects can have charges like $-2e$ and $-3e$
-- Protons have a charge of $+e$, and positively charged objects can have charges like $+2e$ and $+3e$
-- Neutrons have a charge of $0$
-
-:::tip[Key Concepts]
-
-- There are two types of charges: charges of opposite signs attract and charges of the same sign repel
-- Total charge in an isolated system is conserved (conservation of charge)
-- Charge is *quantized*
-
-:::
 
 ### Ground
 
@@ -87,9 +92,9 @@ Attaching a system to ground allows charges to freely flow in and out of it to r
 
 ### Conductors and Insulators
 
-- **Conductors** (e.g. Copper) are materials in which some electrons are free and can move throughout the material.
-- **Insulators** (e.g. Wood) are materials in which all electrons are bound to the atoms and can't move freely at all.
-- **Semiconductors** (e.g. Silicon) have properties similar to both conductors and insulators.
+* **Conductors** (e.g. Copper) are materials in which some electrons are free and can move throughout the material.
+* **Insulators** (e.g. Wood) are materials in which all electrons are bound to the atoms and can't move freely at all.
+* **Semiconductors** (e.g. Silicon) have properties similar to both conductors and insulators.
 
 ### Charging Objects by Friction
 
@@ -203,19 +208,18 @@ If that didn't make sense, don't worry! What we just talked about is a little ou
 
 **8.1.1**
 
-- [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
-- [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
-- The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
-- [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
+* [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
+* [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
+* The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
+* [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
 
 **8.1.2**
 
-- [Charging via conduction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Conduction)
-- [Charging via friction (also called triboelectric charging)](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Friction)
-- [Charging by induction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Induction)
-- [Charging by induction video](https://www.youtube.com/watch?v=ZbBHnod_Mew)
-
+* [Charging via conduction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Conduction)
+* [Charging via friction (also called triboelectric charging)](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Friction)
+* [Charging by induction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Induction)
+* [Charging by induction video](https://www.youtube.com/watch?v=ZbBHnod_Mew)
 
 **8.1.3**
 
-- [Video about how electrostatic forces and polarization work](https://www.khanacademy.org/science/highschool-physics/x6679aa2c65c01e53:electrostatics/x6679aa2c65c01e53:static-electricity/v/static_electricity)
+* [Video about how electrostatic forces and polarization work](https://www.khanacademy.org/science/highschool-physics/x6679aa2c65c01e53:electrostatics/x6679aa2c65c01e53:static-electricity/v/static_electricity)
