refining and adding more detailed stuff about permittivity. also removing backups

--- a/docs/Unit-8/8.3-coulomb.md
+++ b/docs/Unit-8/8.3-coulomb.md
@@ -44,25 +44,33 @@ Just like how we can define an object as a particle for mechanical physics, we c
 
 :::tip[Key Equation]
 
-$F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
+$\large |F_{e}| = k_{e}\cdot\frac{|q_{1} \cdot q_{2}|}{r^{2}}$
 
 :::
 
 Does this equation seem familiar? It is similar to Newton’s gravitation law!
 
+:::note
+
+Unlike gravitational forces, electric forces can be both positive and negative because they can be attractive and repulsive. However, gravitational forces are only attractive.
+
+In the equation above, the absolute value represents the *magnitude* of the electric force. The direction isn't included.
+
+:::
+
 In Coulomb’s law, $k_{e}$ is the **Coulomb constant**. The Coulomb constant is as follows:
 
-$k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2}$
+$\large k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2}$
 
 where $\text{C}$ is the SI unit of charge called a **coulomb**. It’s similar to how $\text{N}$ is a newton.
 
 You can also represent the constant like this:
 
-$k_{e} = \frac{1}{4\pi\epsilon_{0}}$
+$\large k_{e} = \frac{1}{4\pi\epsilon_{0}}$
 
-where $\epsilon_{0}$ (epsilon) is the **permittivity of free space**. $\epsilon_{0}$ is defined as follows:
+where $\epsilon_{0}$ (epsilon) is the **permittivity of free space**. The permittivity of free space is a fancy way to say "how well does electricity travel through a vacuum (free space)?" If it doesn't make sense, don't worry! We will define it in depth later on. For now, we can say $\epsilon_{0}$ is defined as follows:
 
-$\epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
+$\large \epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
 
 The smallest known unit of charge is the charge of an electron ($-e$) or a proton (+$e$) where $e = 1.60219 \times 10^{-19} \text{ C}$. So, a charge of $1C$ is roughly equal to the magnitude of the charge of $6.24 \times 10^{18}$ electrons (or protons).
 
@@ -78,7 +86,7 @@ Below are the charges and masses of an electron, proton, and neutron:
 
 Just like in mechanics, we can represent electrostatic forces as a force vector! We can express the force that an electric charge $q_{1}$ exerts on another charge $q_{2}$ as $F_{12}$:
 
-$\mathbf{F}_{12} = k_{e}\frac{q_{1} \cdot q_{2}}{r^{2}} \mathbf{\widehat{r}}$
+$\large \mathbf{F}_{12} = k_{e}\frac{q_{1} \cdot q_{2}}{r^{2}} \mathbf{\widehat{r}}$
 
 Electrostatic forces also obey Newton’s third law, so the electrostatic force exerted by $q_{1}$ on $q_{2}$ is equal and opposite to the force exerted by $q_{2}$ on $q_{1}$. In other words, $\mathbf{F}_{12} = -\mathbf{F}_{21}$.
 
@@ -89,7 +97,7 @@ Note that if the charges have the same sign, both negative or both positive, the
 
 When calculating the net force from more than two charges, you simply sum up the resultant forces exerted by the individual charges. It’s just like what was done in mechanics. For example, let’s say we have four charges and we want to calculate the resultant force on particle 1. It would be the following:
 
-$\mathbf{F}_{1} = \mathbf{F}_{21} + \mathbf{F}_{31} + \mathbf{F}_{41}$.
+$\large \mathbf{F}_{1} = \mathbf{F}_{21} + \mathbf{F}_{31} + \mathbf{F}_{41}$.
 
 By now, you should be noticing patterns and similarities with existing mechanical concepts!
 
@@ -120,7 +128,7 @@ Here is a video describing how we can use Coulomb's Law to determine electrostat
 
 **Equations**
 
-* $F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
+* $\large F_{e} = k_{e}\cdot\frac{|q_{1}|\cdot|q_{2}|}{r^{2}}$
   * $F_{e}$ = electric force
   * $k_{e}$ = Coulomb's constant
   * $q_{1}$ and $q_{2}$ = the two charges
@@ -128,5 +136,5 @@ Here is a video describing how we can use Coulomb's Law to determine electrostat
 
 **Constants**
 
-* $k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
-* $\epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
+* $\large k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
+* $\large \epsilon_{0} = 8.8542 \times 10^{-12} \text{ C}^{2} / \text{ N} \cdot \text{m}^{2}$
