--- a/docs/Unit-8/8.4-fields.md
+++ b/docs/Unit-8/8.4-fields.md
@@ -141,6 +141,20 @@ A video covering integrals in the context of electric fields. It also covers som
 
 :::
 
+## 8.4.3 Electric Permittivity
+
+As discussed before, polarization is the alignment of electric charges within a material. Materials that are conductive are easier to polarize because the electric charges want to move. Materials that are insulative are harder to polarize because the electric charges are more stubborn and won't move.
+
+:::warning
+
+Even though the charges within insulators don't move as easily when compared to conductors, **both materials can still be polarized.** It's harder to polarize an insulator compared to a conductor, but it's still possible.
+
+:::
+
+Electric permittivity is the tendency for a charge within a certain material to become polarized in the presence of an electrical field.
+
+The permittivity of free space is the tendency for a charge within a vacuum to become polarized.
+
 ## Useful Resources
 
 **8.4.1**
@@ -157,6 +171,11 @@ A video covering integrals in the context of electric fields. It also covers som
 * [Video about integrals and electric fields (same as the Suggested Content)](https://www.youtube.com/embed/mACpLjE_XKk?si=QiPkpF55vUB03UTB)
 * [Lecture about continuous charge distribution field calculations](https://www.youtube.com/watch?v=tRnycUSt2SA)
 * [Article about continuous distributions](https://phys.libretexts.org/Bookshelves/University_Physics/University_Physics_(OpenStax)/University_Physics_II_-_Thermodynamics_Electricity_and_Magnetism_(OpenStax)/05%3A_Electric_Charges_and_Fields/5.06%3A_Calculating_Electric_Fields_of_Charge_Distributions)
+
+**8.4.3**
+
+* [Definition of permittivity](https://www.britannica.com/science/permittivity)4
+* [Video about permittivity](https://www.youtube.com/watch?v=5x8kj02ar34)
 
 ## Equations and Constants
 
