working on updating fields

--- a/docs/Unit-8/8.4-fields.md
+++ b/docs/Unit-8/8.4-fields.md
@@ -10,7 +10,9 @@ sidebar_position: 5
 
 It might sound strange that we are discussing gravitational fields. After all, shouldn't we be talking about electric fields? Well, as you've seen in previous topics, the concepts from mechanics are not all that different from E&M.
 
-When studying gravitational fields, we knew that the gravitational force $\mathbf{F}_{g}$ acting on a particle of mass $m$ could be defined as $\mathbf{g} = \frac{\mathbf{F}_{g}}{m}$. Similarly, electric fields can act on a particle of charge. And just like how a gravitational field exists around an object, an electrical field exists in the region of space around a charged object which is called the **source charge**. When a secondary object, called the **test charge** enters the field, an electric force acts upon it. That may sound strange, but consider the following: think about the Earth and the Moon for a bit. The Earth has a gravitational field all around it. If we removed the Moon and all other objects, then Earth's gravitational field wouldn't exert a force on anything. Sure, the field is still present, but there's nothing to exert a force on. If we add the Moon back, you'll see that Earth's gravitational field acts on it. Similarly, a charged particle has an electric field and when another charged particle enters it, an electric force will act on the particle that entered.
+When studying gravitational fields, we knew that the gravitational force $\mathbf{F}_{g}$ acting on a particle of mass $m$ could be defined as $\mathbf{g} = \frac{\mathbf{F}_{g}}{m}$. Similarly, electric fields can act on a particle of charge. And just like how a gravitational field exists around an object, an electrical field exists in the region of space around a charged object, called the **source charge**. When a secondary object called the **test charge** enters the field, an electric force acts upon it.
+
+That may sound strange, but consider the gravitational relationship between the Earth and Moon. The Earth has a gravitational field all around it. If we removed the Moon and all surrounding objects, then Earth's gravitational field wouldn't exert a force on anything. While the field is still present, you won't be able to see its effects because there's no objects under the influence of the field. When we add the Moon back, you'll be able to observe the effects of Earth's gravitational field. Similarly, a charged particle **always** has an electric field present.Only when another charge enters the field can you observe the effects of that field and the electric forces.
 
 ### Mathematically Defining the Electric Field
 
@@ -19,9 +21,11 @@ When studying gravitational fields, we knew that the gravitational force $\mathb
 An electric field is defined as $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$, where:
 $\mathbf{E}$ is the electric field vector, or the symbol representing the field
 $\mathbf{F}_{e}$ is the electrical force, as seen in Coulomb’s law
-$q_{0}$ is the positive test charge which we placed in the field (basically the electrical equivalent of the Moon being placed in Earth’s gravitational field)
+$q_{0}$ is the **positive** test charge which we placed in the field (basically the electrical equivalent of the Moon being placed in Earth’s gravitational field).
 
-This equation says that the electric field from the source charge at the location of the test charge is equivalent to the electric force on the test charge per unit of charge.
+However, unlike the Moon, **the test charge has an inconsequential amount of mass and charge.** This is extremely important: we wan't to observe the effects of the *source charge,* so we don't want our test charge to affect the electric field of the source.
+
+Also, the test charge is considered positive by standard convention. Most textbooks use this convention.
 
 :::
 
@@ -30,7 +34,7 @@ This equation says that the electric field from the source charge at the locatio
 The equation above only works for particles, or an object of zero size. For objects that have a defined size, things can get significantly more complicated and will often involve calculus or more complex math.
 :::
 
-It’s important to note that $\mathbf{E}$ is the electric field of the source charge, not the test charge. Furthermore, the existence of the electric field is always part of the source charge and is not dependent on the test charge existing. Remember: Earth still has a gravitational field, even if we removed the Moon. The test charge is only there to help us detect the electric field, just as the Moon helps us detect Earth’s gravitational field.
+It’s important to note that $\mathbf{E}$ is the electric field of the source charge, not the test charge. Furthermore, the existence of the electric field is always part of the source charge and is not dependent on the test charge existing. Remember: Earth still has a gravitational field, even if we removed the Moon. The test charge is only there to help us *detect* the electric field.
 
 :::tip[Key Equation]
 
@@ -42,13 +46,13 @@ The equation above tells us the force on a charged particle placed in an electri
 
 $\mathbf{E}$ is a vector and is in newtons per coulomb, or N/C. The direction of $\mathbf{E}$ is the direction of the force on the test charge. For example, if $\mathbf{E}$ is in the positive direction, then the force on our test charge is also in the positive direction.
 
-We can state that **an electric field exists as a specific point/location if a test charge at that point/location experiences an electric force.** If you know the magnitude and direction of the field at a point, you can calculate the force exerted on any particle at that same point using the aforementioned key equation.
+We can state that **an electric field exists as a specific point if a test charge at that point experiences an electric force.** If you know the magnitude and direction of the field at a point, you can calculate the force exerted on any particle at that same point using the aforementioned key equation.
 
-It’s important to note that these equations only work if **we assume that $q_{0}$ (the test charge) is extremely small and doesn’t affect the charge distribution of the electric field.** If you were to have a particle with a significant amount of charge ($q^{'}_{0} \gg q_{0}$), then the electric fields end up changing. In that case, we can’t use the equations above. This is because the *ratio of the force to the test charge is different*. In other words,
+Once again, these equations only work if **we assume that $q_{0}$ (the test charge) is extremely small and doesn’t affect the charge distribution of the electric field.** If you were to have a particle with a significant amount of charge ($q^{\prime}_{0} \gg q_{0}$), then the electric fields end up changing. In that case, we can’t use the equations above. This is because the *ratio of the force to the test charge is different*. In other words,
 
-$\frac{F^{\prime}_{e}}{q^{\prime}_{0}} \not\equiv \frac{F_{e}}{q_{0}}$
+$\Large \frac{F^{\prime}_{e}}{q^{\prime}_{0}} \not\equiv \frac{F_{e}}{q_{0}}$
 
-Now, the equations will not work for the new test case. So remember: $q_{0}$ has to be extremely small.
+Now, the equations will not work for the new test case.
 
 ### Determining the Direction of an Electric Field
 
@@ -56,23 +60,25 @@ Now, the equations will not work for the new test case. So remember: $q_{0}$ has
 
 Consider the diagram above. Here, we have a source charge $q$ and a test charge $q_{0}$. We have placed $q_{0}$ at a distance of $r$ away from $q$, and we will use this test charge to find out the direction of $q$’s electric force and thus the direction of its field.
 
-Notice how the force vector $\mathbf{F}$ is pointing away from $q$. Because $q$ is positive, the force of the test charge will be directed away from $q$. Remember, the test charge is considered as positive, since this is the standard convention. Both charges are positive and are repelling, so the vector is directed away.
+Notice how the force vector $\mathbf{F}$ is pointing away from $q$. Because $q$ is positive, the force of the test charge will be directed away from $q$. The test charge is considered as positive, since this is the standard convention. Both charges are positive and are repelling, so the vector is directed away.
 
 We know that the force exerted by $q$ on the test charge is the following (Coulomb’s law):
 
-$\mathbf{F_{e}} = k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}$
+$\large \mathbf{F_{e}} = k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}$
 
 $\mathbf{\hat{r}}$ is a unit vector and it’s directed from $q$ to $q_{0}$.
 
 Furthermore, we know that an electric field is defined as $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$. When we substitute $\mathbf{F_{e}}$ in, we get the following:
 
-$\mathbf{E} = \frac{k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}}{q_{0}} = \frac{k_{e}\frac{q\cancel{q_{0}}}{r^{2}}\mathbf{\hat{r}}}{\cancel{q_{0}}} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+$\large \mathbf{E} = \frac{k_{e}\frac{qq_{0}}{r^{2}}\mathbf{\hat{r}}}{q_{0}} = \frac{k_{e}\frac{q\cancel{q_{0}}}{r^{2}}\mathbf{\hat{r}}}{\cancel{q_{0}}} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
 
 :::tip[Key Equation]
-$\mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+$\large \mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+
+Just like gravitational fields, the strength of an electric field increases the closer you are to the charge and decreases the farther you are.
 :::
 
-Remember how we said that the electric field of a charged object is **not** dependent on the test charge’s presence, similar to how Earth’s gravitational field is **not** dependent on the Moon’s presence? Well, you’ll see that in the equation above, $q_{0}$ (the test charge) isn’t even there!
+Remember how we said that the electric field of a charged object is **not** dependent on the test charge’s presence? Well, you’ll see that in the equation above, $q_{0}$ (the test charge) isn’t even there!
 
 Now, consider the following diagram:
 
@@ -90,7 +96,7 @@ What do we do if we want to find out the electric field at a point $P$ due to mu
 
 The electric field at point $P$ due to a group of source charges is the following vector sum:
 
-$\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
+$\large \mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
 
 * $r_{i}$ is the distance between the $i$th source charge $q_{i}$ and point $P$
 * $\hat{\mathbf{r}}_{i}$ is a unit vector directed from $q_{i}$ toward $P$
@@ -103,17 +109,17 @@ Let’s say that we have a group of charges and we want to calculate the electri
 
 When we want to find out the electric field created from this “bundle,” we will have to divide the bundle into small parts that have a small charge $\Delta q$. Next, we use the equation for calculating the electric field for one source charge (see 8.4.1) to calculate the electric field at a point $P$:
 
-$\Delta \mathbf{E} = k_{e}\frac{\Delta q}{r^{2}}\mathbf{\hat{r}}$
+$\large \Delta \mathbf{E} = k_{e}\frac{\Delta q}{r^{2}}\mathbf{\hat{r}}$
 
 Then, we find the total electric field at the point $P$ by summing everything up:
 
-$\mathbf{E} \approx k_{e}\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\mathbf{\hat{r}}_{i}$
+$\large \mathbf{E} \approx k_{e}\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\mathbf{\hat{r}}_{i}$
 
 Note that the field is an approximation.
 
 However, we know that the charge distribution is continuous, so we the following:
 
-$\mathbf{E} = k_{e}\space\lim_{\Delta q_{i} \to 0} \space\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\space\mathbf{\hat{r}}_{i} = k_{e}\int_{}^{} \frac{dq}{r^{2}}\space\mathbf{\hat{r}}$
+$\large \mathbf{E} = k_{e}\cdot\lim_{\Delta q_{i} \to 0} \space\sum_{i}^{}\frac{\Delta q_{i}}{r^{2}_{i}}\space\mathbf{\hat{r}}_{i} = k_{e}\int_{}^{} \frac{dq}{r^{2}}\space\mathbf{\hat{r}}$
 
 You can think of this like finding the center of mass for a uniformly distributed element. For example, finding the center of mass of a plank of wood which has a uniform mass distribution. In fact, just like how you used the density equations for center of mass, you can also use it for charge. This concept is called *charge density*.
 
@@ -181,18 +187,18 @@ The permittivity of free space is the tendency for a charge within a vacuum to b
 
 **Equations**
 
-* $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$
+* $\large \mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$
   * $\mathbf{E}$ = the electric field vector
   * $\mathbf{F}_{e}$ = the electrical force
   * $q_{1}$ and $q_{2}$ = the two charges
   * $q_{0}$ = the positive test charge
-* $\mathbf{F}_{e}  = q\mathbf{E}$
+* $\large \mathbf{F}_{e}  = q\mathbf{E}$
   * Alternate form of the equation above
-* $\mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+* $\large \mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
   * $k_{e}$ = Coulomb's constant
   * $q$ = the magnitude of force between the point charge ($q$) and the test charge
   * $r^{2}$ = the distance between the point charge ($q$) and the point of interest
-* $\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
+* $\large \mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
   * $r_{i}$ = the distance between the $i$th source charge $q_{i}$ and point $P$
   * $\hat{\mathbf{r}}_{i}$ = a unit vector directed from $q_{i}$ toward $P$
   * All other variables are the same as the equation above
