--- a/docs/Unit-8/8.7-gauss.md
+++ b/docs/Unit-8/8.7-gauss.md
@@ -8,7 +8,14 @@ sidebar_position: 8
 
 Before we talk about electric flux, we need to do a quick review of dot products.
 
+Definition: a vector operation that results in a **scalar** product
 
+$\overrightarrow{A} \cdot \overrightarrow{B} = |\overrightarrow{A}\space||\overrightarrow{B}\space|\space cos(\theta)$
+
+![Dot product](8.7-Images/Dot-Product.svg)
+
+- Dot products are the highest when $\theta = 0$ (parallel)
+- Dot products are the least when $\theta = 90$ (perpendicular)
 
 ## 8.7.2 - Flux
 
@@ -20,7 +27,7 @@ Before tackling electric flux, let's assume we are working with air. Let's assum
 
 From this we realize that every second, the air which flows out stretches 10 meters. The area of the vent is 4 meters squared though. So to give our answer for the electric flux, we are able to just multiply the velocity by the area to get an electric flux of 40 cubic meters per second. From this, we can get the equation $\Phi_A = VA_{\perp}$ which explains that the flux of the air is equal to the velocity it flows at times the area of the outlet. It is also important to note that A is the area which is perpendicular to the electric field vector.
 
-Now in order to think of this in the context of electric flux, we must replace velocity with the electric field vector. Electric flux is a measure of the flow of an electric field through a surface. Therefore, the formula for electric flux becomes $\Phi_E = EA_{\perp}$. If the electric field vector enters a surface from a direction which is not perpendicular though, the component of the area which is perpendicular to the electric field vector is used instead. So the equation could also be written as $\Phi_E = EAcos(\theta)$ where $\theta$ is the angle between the electric field line and an imaginary line which is perpendicular to the area.
+Now in order to think of this in the context of electric flux, we must replace velocity with the electric field vector. Electric flux is a measure of the flow of an electric field through a surface. Therefore, the formula for electric flux becomes $\Phi_E = \overrightarrow{E}\cdot\overrightarrow{A_{\perp}}$. If the electric field vector enters a surface from a direction which is not perpendicular though, the component of the area which is perpendicular to the electric field vector is used instead. So the equation could also be written as $\Phi_E = EAcos(\theta)$ where $\theta$ is the angle between the electric field line and an imaginary line which is perpendicular to the area.
 
 :::tip[Key Equation]
 
