- expanding on the air analogy - refining the content

--- a/docs/Unit-8/8.7-gauss.md
+++ b/docs/Unit-8/8.7-gauss.md
@@ -6,7 +6,7 @@ sidebar_position: 8
 
 ## 8.7.1 - Dot Product
 
-Before we talk about electric flux, we need to do a quick review of dot products.
+Before we talk about electric flux, let's do a quick refresher of dot products.
 
 Definition: a vector operation that results in a **scalar** product
 
@@ -17,40 +17,58 @@ $\overrightarrow{A} \cdot \overrightarrow{B} = |\overrightarrow{A}\space||\overr
 - Dot products are the highest when $\theta = 0$ (parallel)
 - Dot products are the least when $\theta = 90$ (perpendicular)
 
+This concept will come in later.
+
 ## 8.7.2 - Flux
+
+### Working With Air
 
 Earlier we learned about electric fields and their interactions with objects. However, we have not yet covered the idea of an electric field passing through a surface. By definition, the meaning of flux is *flow*; a measurement of flux is a measurement of flow, or how much *something* passes through an area. For example, an in*flux* of people is the amount of people going into an **area.**
 
-Before tackling electric flux, let's assume we are working with air. Let's assume that air is traveling through a vent of area $A = 4 \, \text{m}^2$ at a velocity of $v = 10 \, \text{m/s}$. How can we calculate the flux in this scenario? Well, flux is nothing but flow so in reality we are trying to calculate the rate for the amount of air which is flowing out of this vent. So we are trying to calculate the amount of air which flows out of this vent every second.
+Before tackling electric flux, consider this example. Let's assume that air is traveling through a vent of area $A = 4\text{m}^2$ at a velocity of $v = 10\text{m/s}$. How can we calculate the flux in this scenario? Well, flux is nothing but flow, so we are trying to calculate the amount of air that flows out of this vent every second.
 
 ![Image of air flowing out a vent](8.7-Images/Flux-Air.svg)
 
-From this we realize that every second, the air which flows out stretches 10 meters. The area of the vent is 4 meters squared though. So to give our answer for the electric flux, we are able to just multiply the velocity by the area to get an electric flux of 40 cubic meters per second. From this, we can get the equation $\Phi_A = VA_{\perp}$ which explains that the flux of the air is equal to the velocity it flows at times the area of the outlet. It is also important to note that A is the area which is perpendicular to the electric field vector.
+Because the air is moving at $10m/s$, that means a particle of air will be 10 meters away from the event at $t = 1s$. We also know that the vent is $4m^{2}$. To calculate the flux, or how much air flows out per second, we multiply the velocity and the area to get $10\frac{m}{s} \times 4m^{2} = 40\frac{m^{3}}{s}$. Thus, the flux of *air* is 40 cubic meters per second. Pretty easy, right!
 
-Now in order to think of this in the context of electric flux, we must replace velocity with the electric field vector. Electric flux is a measure of the flow of an electric field through a surface. Therefore, the formula for electric flux becomes $\Phi_E = \overrightarrow{E}\cdot\overrightarrow{A_{\perp}}$. If the electric field vector enters a surface from a direction which is not perpendicular though, the component of the area which is perpendicular to the electric field vector is used instead. So the equation could also be written as $\Phi_E = EAcos(\theta)$ where $\theta$ is the angle between the electric field line and an imaginary line which is perpendicular to the area.
+Now, let's make an equation representing this situation!
+
+We can get the equation $\Phi_A = V_{\perp}A$. This says that the flux, or flow, of air (represented by $\Phi_A$) is equivalent to the velocity of the air multiplied by the area of the outlet, or the vent.
+
+In case of our example, the equation represents the following: $airflow = air \space speed \times vent \space area$.
+
+It is important to note that $V$ is the velocity vector that is perpendicular to the air vent. Looking at our example, you'll see that the arrows for the airflow are perpendicular to the vent. They are not angled.
+
+### Working With Electricity
+
+In order to apply this to electric flux rather than air flux, we can use our equation from earlier but replace a few variables to apply it to electricity. We first replace the velocity vector $V$ with an electric field fector $\overrightarrow{E}$. We also replace $\Phi_A$ with $\Phi_E$ because we need electric flux, not air flux. So, our formula turns into the following:  $\Phi_E = \overrightarrow{E_{\perp}}\cdot\overrightarrow{A}$.
+
+We will also replace $\overrightarrow{E_{\perp}}$ with $\overrightarrow{E}cos(\theta)$. See [8.7.1](8.7-gauss.md#871---dot-product) for more details.
 
 :::tip[Key Equation]
 
 $\Phi_E = EA_{\perp} = EAcos(\theta)$
 
-**Note:** $\theta$ is the angle between the electric field line and an imaginary line which is perpendicular to the area
+$\theta$ is the angle between the electric field vector and an imaginary line that is perpendicular to the area. See [8.7.1](8.7-gauss.md#871---dot-product) for more details.
 
 :::
 
 :::info[Sample Question]
 
-A large flat metal sheet lies horizontally on the ground under a uniformly distributed electric field. A circular loop of radius $r = 0.4 , \text{m}$ is held perpendicular to the field lines, which point vertically upward with a constant magnitude of $E = 250 , \text{N/C}$. What is the total electric flux $\Phi_E$ through the loop?
+A large flat metal sheet lies horizontally on the ground under a uniformly distributed electric field. A circular loop of radius $r = 0.4\text{m}$ is held perpendicular to the field lines, which point vertically upward with a constant magnitude of $E = 250 \space \text{N/C}$. What is the total electric flux $\Phi_E$ through the loop?
 
-$\Phi_E = EA\cos\theta$
+$\Phi_E = EA\cos\theta$.
 Since the electric field is perpendicular to the loop, $\theta = 0^\circ$, and $\cos\theta = 1$
 
-$A = \pi r^2 = \pi (0.4)^2 = 0.16\pi , \text{m}^2$
+$A = \pi r^2 = \pi (0.4)^2 = 0.16\pi\text{m}^2$
 
-$\Phi_E = (250)(0.16\pi) = 40\pi , \text{N} \cdot \text{m}^2/\text{C}$
+$\Phi_E = (250)(0.16\pi) = 40\pi \space \text{N} \cdot \text{m}^2/\text{C}$
 
-$\Phi_E \approx 125.7 , \text{N} \cdot \text{m}^2/\text{C}$
+$\Phi_E \approx 125.7 \space \text{N} \cdot \text{m}^2/\text{C}$
 
 :::
+
+### Flux on a Complex Surface
 
 What if we are now working with complex surfaces? Like maybe a closed surface? The area of that will not only be too complex to find, but the electric flux will differ at each part of the figure due to the differing orientations of the perpendicular surface and the electric field vector.
 
