--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -88,6 +88,12 @@ When we attach a grounding wire to an object, we are essentially connecting it t
 
 Attaching a system to ground allows charges to freely flow in and out of it to reach electrostatic equilibrium. However, this doesn't necessarily mean it will become a neutral charge.
 
+:::note
+
+Electrostatic equilibrium is covered in detail later.
+
+:::
+
 ### Conductors and Insulators
 
 * Conductors (e.g. Copper) are materials in which some electrons are free and can move throughout the material.
